--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,10 +31,10 @@ categories = ["embedded", "hardware-support", "no-std", "science::robotics"]
 
 [dependencies]
 embedded-hal = "=1.0.0-alpha.9"
-fugit = "0.3.5"
+fugit = "0.3.6"
 fugit-timer = "0.1.3"
 nb = "1.0.0"
-paste = "1.0.3"
+paste = "1.0.11"
 ramp-maker = "0.2.0"
 
 [dependencies.embedded-hal-stable]
@@ -42,7 +42,7 @@ version = "0.2.7"
 package = "embedded-hal"
 
 [dependencies.num-traits]
-version = "0.2.14"
+version = "0.2.15"
 default-features = false
 
 [dependencies.replace_with]
@@ -51,13 +51,14 @@ default-features = false
 
 
 [dev-dependencies]
-fixed = "1.6.0"
-typenum = "1.12.0"
+fixed = "1.23.0"
+typenum = "1.16.0"
 
 
 [features]
-default = ["a4988", "drv8825", "stspin220", "dq542ma"]
+default = ["a4988", "drv8825", "stspin220", "dq542ma", "tb67s128ftg"]
 a4988 = []
 drv8825 = []
 stspin220 = []
 dq542ma = []
+tb67s128ftg = []
