--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,8 @@ categories = ["embedded", "hardware-support", "no-std", "science::robotics"]
 [dependencies]
 embedded-hal = "=1.0.0-alpha.9"
 fugit = "0.3.6"
-fugit-timer = "0.1.3"
+#fugit-timer = "0.1.3"
+fugit-timer = { git = "https://github.com/MathiasKoch/fugit-timer.git", branch = "feature/timer-storage-selection" }
 nb = "1.0.0"
 paste = "1.0.11"
 ramp-maker = "0.2.0"
@@ -62,3 +63,4 @@ drv8825 = []
 stspin220 = []
 dq542ma = []
 tb67s128ftg = []
+u64 = []
