--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "drivers/a4988",
     "drivers/drv8825",
     "drivers/stspin220",
+    "drivers/tb67s128ftg",
 ]
 default-members = [
     ".",
@@ -11,6 +12,7 @@ default-members = [
     "drivers/a4988",
     "drivers/drv8825",
     "drivers/stspin220",
+    "drivers/tb67s128ftg",
 ]
 
 [package]
@@ -31,11 +33,11 @@ categories = ["embedded", "hardware-support", "no-std", "science::robotics"]
 
 [dependencies]
 embedded-hal = "=1.0.0-alpha.9"
-fugit = "0.3.6"
+fugit = "0.3.7"
 #fugit-timer = "0.1.3"
-fugit-timer = { git = "https://github.com/MathiasKoch/fugit-timer.git", branch = "feature/timer-storage-selection" }
-nb = "1.0.0"
-paste = "1.0.11"
+fugit-timer = { git = "https://github.com/Ultrajackstr/fugit-timer.git", branch = "feature/timer-storage-selection" }
+nb = "1.1.0"
+paste = "1.0.12"
 ramp-maker = "0.2.0"
 
 [dependencies.embedded-hal-stable]
@@ -52,7 +54,7 @@ default-features = false
 
 
 [dev-dependencies]
-fixed = "1.23.0"
+fixed = "1.23.1"
 typenum = "1.16.0"
 
 
