--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,12 +32,12 @@ categories = ["embedded", "hardware-support", "no-std", "science::robotics"]
 
 
 [dependencies]
-embedded-hal = "=1.0.0-alpha.9"
+embedded-hal = "1.0.0-rc.1"
 fugit = "0.3.7"
 #fugit-timer = "0.1.3"
 fugit-timer = { git = "https://github.com/Ultrajackstr/fugit-timer.git", branch = "feature/timer-storage-selection" }
 nb = "1.1.0"
-paste = "1.0.12"
+paste = "1.0.14"
 ramp-maker = "0.2.0"
 
 [dependencies.embedded-hal-stable]
@@ -45,7 +45,7 @@ version = "0.2.7"
 package = "embedded-hal"
 
 [dependencies.num-traits]
-version = "0.2.15"
+version = "0.2.16"
 default-features = false
 
 [dependencies.replace_with]
@@ -55,7 +55,7 @@ default-features = false
 
 [dev-dependencies]
 fixed = "1.23.1"
-typenum = "1.16.0"
+typenum = "1.17.0"
 
 
 [features]
