--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,15 +38,16 @@ fugit = "0.3.7"
 fugit-timer = { git = "https://github.com/Ultrajackstr/fugit-timer.git", branch = "feature/timer-storage-selection" }
 nb = "1.1.0"
 paste = "1.0.14"
-ramp-maker = "0.2.0"
+#ramp-maker = "0.2.0"
+ramp-maker = {git = "https://github.com/Ultrajackstr/ramp-maker.git", branch = "main"}
 
 [dependencies.embedded-hal-stable]
 version = "0.2.7"
 package = "embedded-hal"
 
-[dependencies.num-traits]
-version = "0.2.16"
-default-features = false
+#[dependencies.num-traits]
+#version = "0.2.17"
+#default-features = false
 
 [dependencies.replace_with]
 version = "0.1.7"
@@ -54,8 +55,8 @@ default-features = false
 
 
 [dev-dependencies]
-fixed = "1.23.1"
-typenum = "1.17.0"
+fixed = "2.0.0-alpha.12"
+#typenum = "1.17.0"
 
 
 [features]
