--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,18 +32,14 @@ categories = ["embedded", "hardware-support", "no-std", "science::robotics"]
 
 
 [dependencies]
-embedded-hal = "1.0.0-rc.1"
-fugit = "0.3.7"
+embedded-hal = "1.0"
+fugit = "0.3"
 #fugit-timer = "0.1.3"
 fugit-timer = { git = "https://github.com/Ultrajackstr/fugit-timer.git", branch = "feature/timer-storage-selection" }
-nb = "1.1.0"
-paste = "1.0.14"
+nb = "1.1"
+paste = "1.0"
 #ramp-maker = "0.2.0"
 ramp-maker = {git = "https://github.com/Ultrajackstr/ramp-maker.git", branch = "main"}
-
-[dependencies.embedded-hal-stable]
-version = "0.2.7"
-package = "embedded-hal"
 
 #[dependencies.num-traits]
 #version = "0.2.17"
