--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,11 +34,9 @@ categories = ["embedded", "hardware-support", "no-std", "science::robotics"]
 [dependencies]
 embedded-hal = "1"
 fugit = "0"
-#fugit-timer = "0.1.3"
 fugit-timer = { git = "https://github.com/Ultrajackstr/fugit-timer.git", branch = "feature/timer-storage-selection" }
 nb = "1"
 paste = "1"
-#ramp-maker = "0.2.0"
 ramp-maker = {git = "https://github.com/Ultrajackstr/ramp-maker.git", branch = "main"}
 
 #[dependencies.num-traits]
@@ -51,7 +49,7 @@ default-features = false
 
 
 [dev-dependencies]
-fixed = "2.0.0-alpha.27.0"
+fixed = "1"
 #typenum = "1.17.0"
 
 
